manifests/istio/destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: myapi
  namespace: api
spec:
  host: myapi
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
